--- a/style.css
+++ b/style.css
@@ -119,9 +119,6 @@ main > section{
 }
 
 
-#quick-list{
-    font-weight: 500;
-}
 
 /* some facts related style */
 
@@ -158,6 +155,55 @@ main > section{
 max-width: 540px;
 }
 
+/* sponsor related style */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.img {
+    filter: grayscale(100%);
+  }
+
+
+
+#quick-list{
+    font-weight: 500;
+}
+
+/* feature section related styles */
+
+#feature-section-title{
+border-left: 5px solid #ff900e;
+padding-left: 20px;
+}
+
+.feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+.feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+   
+}
+
+.features{
+   
+    gap: 100px;
+
+}
+
+
 /* responsive media query */
 
 @media screen and (max-width: 576px) {
@@ -167,13 +213,32 @@ max-width: 540px;
         flex-direction: column;
     }
 
-    .team-img-container{
+    .team-img-container, 
+    .facts-container,
+    .sponsor-companies
+    {
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    .facts-container{
+        justify-items: center;
+        gap: 24px;
     }
 
     .our-features{
         margin-left: 20px;
     }
+    .sponsor-companies, .facts-container{
+        justify-items: center;
+        gap: 50px;
+        justify-items: center;
+    }
+    
+    .sponsor-companies{
+        grid-template-columns: repeat(1, 1fr);
+        gap: 50px;
+    }
+
     
 }
 
