adden an feature and mobile or tab media

--- a/style.css
+++ b/style.css
@@ -120,6 +120,8 @@ main > section{
 
 
 
+
+
 /* some facts related style */
 
 .facts-container{
@@ -182,6 +184,8 @@ border-left: 5px solid #ff900e;
 padding-left: 20px;
 }
 
+#
+
 .feature-card{
     padding: 30px;
     box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
@@ -199,8 +203,26 @@ padding-left: 20px;
 
 .features{
    
-    gap: 100px;
+    gap: 140px;
 
+}
+
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+
+}
+
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.featured-architect img{
+    width: 100%;
 }
 
 
@@ -208,7 +230,8 @@ padding-left: 20px;
 
 @media screen and (max-width: 576px) {
     .navbar, 
-    .nav-links, 
+    .nav-links,
+    .features, 
     .teams{
         flex-direction: column;
     }
@@ -226,6 +249,11 @@ padding-left: 20px;
     }
 
     .our-features{
+        margin-left: 20px;
+    }
+
+    #experience-badge{
+        margin-top: 20px;
         margin-left: 20px;
     }
     .sponsor-companies, .facts-container{
@@ -250,5 +278,9 @@ padding-left: 20px;
     }
     .our-features{
         margin: 50px auto;
+    }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
     }
 }
