--- a/style.css
+++ b/style.css
@@ -225,6 +225,17 @@ padding-left: 20px;
     width: 100%;
 }
 
+.footer{
+        text-align: center;
+        padding: 5px;
+        background-color: #FFF4E7;
+        color: black;
+        padding-bottom: 10px;
+        margin-top: 100px;
+        margin-bottom: 50px;
+
+      }
+
 
 /* responsive media query */
 
